--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".DetailActivity"/>
         </activity>
-
+        <activity android:name=".SearchMoviesActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
