Add MovieListingContentProvider class and register it in AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,5 +43,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
+        <provider
+            android:name="com.waakye.android.popularmovies9.data.MovieListingContentProvider"
+            android:authorities="com.android.provider.favoriteMovies"
+            android:exported="false"/>
     </application>
 </manifest>
