--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,8 +44,8 @@
                 android:value=".MainActivity"/>
         </activity>
         <provider
+            android:authorities="com.waakye.android.popularmovies9"
             android:name="com.waakye.android.popularmovies9.data.MovieListingContentProvider"
-            android:authorities="com.android.provider.favoriteMovies"
             android:exported="false"/>
     </application>
 </manifest>
