Add supporting files and code for FavoritesActivity which opens when user selects "My Favorites" from menu_main

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
+        <activity android:name=".FavoritesActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <provider
             android:authorities="com.waakye.android.popularmovies9"
             android:name="com.waakye.android.popularmovies9.data.MovieListingContentProvider"
